--- a/got.html
+++ b/got.html
@@ -42,7 +42,8 @@
         #opts {
           width: 100px;
           height: 30px;
-          margin-left: 320px;  
+          display: block;
+          margin: 0 auto;
         }
     </style>
 </head>
@@ -192,7 +193,7 @@
     function update(links, nodes) {
 
         simulation = d3.forceSimulation()
-        .force("link", d3.forceLink().id(function (d) {return d.id;}).distance(150).strength(2.01))
+        .force("link", d3.forceLink().id(function (d) {return d.id;}).distance(150).strength(2))
         .force("charge", d3.forceManyBody().strength(-500).distanceMax(290))
         .force("center", d3.forceCenter(width / 2, height / 2))
         .force("collision", d3.forceCollide().radius(radius + 10))
