--- a/got.html
+++ b/got.html
@@ -9,14 +9,15 @@
         body {
             background-image: url("https://d28hgpri8am2if.cloudfront.net/book_images/onix/interior_spreads/9781608877447/game-of-thrones-deluxe-hardcover-sketchbook-9781608877447.in05.jpg")
         }
-            path{
-        stroke: black;
-        stroke-width: 0.3px;
-    }
-    path.fade{
-        display: none;
-    }
 
+        path{
+            stroke: black;
+            stroke-width: 0.3px;
+        }
+
+        path.fade{
+            display: none;
+        }
 
         .header {
             width:100%;
@@ -40,6 +41,11 @@
         }
 
         .link { stroke: black; stroke-opacity: 1; stroke-width: 1px; }
+
+        .text {
+            font-size: 10px;
+            font-family: sans-serif;
+        }
 
         svg{
           display: block;
@@ -71,7 +77,7 @@
 <script src="http://d3js.org/d3.v3.min.js"></script>
 
 
-<<script src="http://d3js.org/d3.v4.min.js" type="text/javascript"></script>
+<script src="http://d3js.org/d3.v4.min.js" type="text/javascript"></script>
 
 <script src="http://d3js.org/d3-selection-multi.v1.js"></script>
 
@@ -201,9 +207,7 @@
                 })
             }
             else if (value == "data3") {
-                //d3.json("war_graph.json", function (error, graph) {
-                    //if (error) throw error;
-                    d3.selectAll("svg").remove();
+                    g.selectAll("*").remove();
                     data3();
                 }
             }
@@ -562,29 +566,21 @@
     function data3() {
 
 
-        var margin = { top: 20, right: 10, bottom: 10, left: 50 },
-            width = 960 - margin.left - margin.right,
-            height = 600 - margin.top - margin.bottom,
-            innerRadius = Math.min(width, height) * .25,
+        var innerRadius = Math.min(width, height) * .25,
             outerRadius = innerRadius * 1.3;
 
 
-        var svg = d3.select("body").append("svg")
-            .attr("width", width + margin.left + margin.right)
-            .attr("height", height + margin.top + margin.bottom)
-            .append("g")
-            .attr("transform", "translate(" + margin.left + "," + margin.top + ")")
-            .append("g")
+        var new_g = g.append("g")
             .attr("class", "chordgraph")
             .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
 
-        d3.csv("Cartel2.csv", function (d) {
+        //d3.csv("Cartel2.csv", function (d) {
             /*
              * IMPORTANT! Specify your first column of data here (see example data)
              *
              */
-            var primeColumn = "deathcause";
+        /*    var primeColumn = "deathcause";
             //store coloumn names
             var pc = d.map(function (d) { return d[primeColumn]; }),
                 po = pc.slice(0),
@@ -610,7 +606,7 @@
                     }
                 }
             }
-        });
+        });*/
 
 
 
@@ -675,7 +671,7 @@
 
 
 
-            svg.selectAll("path")
+            new_g.selectAll("path")
                 .data(chord.groups)
                 .enter()
                 .append("path")
@@ -690,7 +686,102 @@
                 .attr("d", arc)
                 /*******************************************************************************************************/
                 .on("click", function (d) {
-                    console.log(righe[d.index]);
+
+                    if ((d.index + 1) <= (fo.length)) {
+                        if(tip) closeTip();
+
+                        tip = svg.append('g').style("opacity", 0);
+
+                        var rect = tip.append("rect")
+                                        .style("fill", "#c2b280")
+                                        .style("stroke", "black")
+                                        .attr("rx", 6)
+                                        .attr("ry", 6);
+
+                        var image = righe[d.index]["Image"];
+                        console.log(image);
+
+                        var imageSize = 150;
+                        var margin = 10
+
+                        tip.append("clipPath")
+                            .attr("id", function(d, i) { return "tipimg" + i })
+                            .append("rect")
+                                .attr("width", imageSize)
+                                .attr("height", imageSize)
+                                .attr("x", margin);
+
+                        tip.append("image")
+                            .attr("xlink:href", image)
+                            .attr("x", function(d) { return 5;})
+                            .attr("y", function(d) { return 5;})
+                            .attr("height", imageSize)
+                            .attr("width", imageSize)
+                            .attr("clip-path", function(d, i) { return "url(#tipimg"+ i +")" });
+
+                        var i = 2;
+
+                        var font = "20px"
+
+                        tip.append("text")
+                            .text("Name: " + d.name)
+                            .attr("font-size", font)
+                            .attr("dy", i + "em")
+                            .attr("x", margin + imageSize + 5);
+
+                        i++;
+
+                        tip.append("text")
+                            .text("Status: " + d.status)
+                            .attr("font-size", font)
+                            .attr("dy", i + "em")
+                            .attr("x", margin + imageSize + 5);
+
+                        i++;
+                    
+                        if(d["house-birth"]) {
+                            tip.append("text")
+                                .text("House: " + d["house-birth"])
+                                .attr("font-size", font)
+                                .attr("dy", i + "em")
+                                .attr("x", margin + imageSize + 5);
+
+                            i++;
+                        }
+
+                        if(d.group) {
+                            tip.append("text")
+                                .text("Group: " + d.group)
+                                .attr("font-size", font)
+                                .attr("dy", i + "em")
+                                .attr("x", margin + imageSize + 5);
+
+                            i++;
+                        }
+
+                        if(d["house-marriage"]) {
+                            tip.append("text")
+                                .text("House marriage: " + d["house-marriage"])
+                                .attr("font-size", font)
+                                .attr("dy", i + "em")
+                                .attr("x", margin + imageSize + 5);
+
+                            i++;
+                        }
+
+                        var bbox = tip.node().getBBox();
+                        var w = bbox.width + 15;
+                        var h = bbox.height + 5;
+                        rect.attr("width", w)
+                            .attr("height", h)
+
+                        tip.attr("transform", "translate("+ (width - w) + ",0)");
+                        tip.transition()
+                            .duration(200)
+                            .style("opacity", 1)
+                    } else {
+                        closeTip();
+                    }
                 })
 
 
@@ -702,7 +793,7 @@
 
 
 
-            var chords = svg.append("g")
+            var chords = new_g.append("g")
                 .attr("class", "chord")
                 .selectAll("path")
                 .data(chord.chords)
@@ -718,7 +809,7 @@
                 .style("stroke", function (d) { return "#000"; });
 
 
-            svg.selectAll(".text")
+            new_g.selectAll(".text")
                 .data(chordgroups)
                 .enter()
                 .append("text")
@@ -728,18 +819,16 @@
 
                     //rotate each label around the circle
                     return "rotate(" + (d.angle * 180 / Math.PI - 90) + ")" +
-                           "translate(" + (outerRadius + 7) + ")" +
-                           (d.angle > Math.PI ? "rotate(175)" : "");
+                           "translate(" + (outerRadius + 7) + "," + (d.angle > Math.PI ? "-3" : "3") + ")" +
+                           (d.angle > Math.PI ? "rotate(180)" : "");
 
                 })
                 .text(function (d, i) {
                     //set the text content
                     return fc[i];
                 })
-                .style({
-                    "font-family": "sans-serif",
-                    "font-size": "10px"
-                })
+
+            zoomFit();
 
         });
     }
